--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -6,6 +6,7 @@
     }
     section#login {
         width: 95vw;
+        height: 320px;
     }
 
     section#login > div#imagem {
@@ -21,6 +22,7 @@
 
     div#formulario > p {
         font-size: 1.0em;
+        margin: 20px 0px;
     }
 }
 
@@ -32,6 +34,7 @@
 
     section#login {
         width: 950px;
+        height: 380px;
     }
 
     section#login > div#imagem {
@@ -50,6 +53,7 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1.0em;
+        margin: 20px 0px;
     }
 }
